@@ -7,6 +7,8 @@ vX.Y.Z (YYYY-MM-DD)
 - Use .svg file for AppImage; remove .png file.
 - Use ARGV0 instead of hard coding name in AppRun
 - Remove Julia version of dbt2-post-process
+- Add SQLite3 version of dbt2-post-process
+- Calculate type 1 quantiles
 
 v0.50.1 (2023-03-03)
 
